src/test/deca/context/invalid/Readint_inst.deca
//Test pour readfloat

//Resultat: 

{
    int x = readFloat();
    println(0.5*(x*x)) ; 
}